--- a/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
@@ -33,14 +33,15 @@
 					padding-left:40px;
 				}
 			}
+			//top icon
 			.views-field.views-field-type{
 				padding:4px;
 				border-top:0;
 				position:absolute;
 				top:0;
 				right:0;
-				min-width:30px;
-				max-width:30px;
+				min-width:115px;
+				max-width:115px;
 				min-height:30px;
 				z-index:1;
 				margin:0 0 0 0;
@@ -53,31 +54,64 @@
 					color:$color1Light;
 				}
 				.field-content{
-					@include accesibleHide;
 					min-width:80px;
 					color:$WHITE;
 					font-weight:bold;
 					margin-top:5px;
-					text-align:center;
-				}
-			}
-			//content type icons
-			&.rowContentType-business-service-or-attraction{
-				.views-field.views-field-type:before{
-					content:'\e81b';
-				}
-			}
-			&.rowContentType-event{
-				.views-field.views-field-type:before{
-					content:'\e81c';
+					text-align:left;
 				}
 			}
 			&:hover{
 				.views-field.views-field-type{
-					max-width:150px;
+					min-width:145px;
+					max-width:145px;
 					.field-content{
-						@include accesibleUnhide;
-						text-align:center;	
+						text-align:left;	
+					}
+				}
+			}
+			//content type: icons & colorings
+			&.rowContentType-business-service-or-attraction{
+				.views-field.views-field-type{//top icon
+					@include backgroundOpacity($color1,0.8);
+					&:before{
+						content:'\e81b';
+						background-color:$WHITE;
+						color:$color1;
+					}
+					.field-content{
+						color:$WHITE;
+					}
+				}	
+				.views-field.views-field-title{//title
+					@include colorDescendantsFont($color1);
+				}
+				.views-field{//other icons
+					&:before{
+						background-color:$color1; 
+						color:white;
+					}
+				}
+			}
+			&.rowContentType-event{
+				.views-field.views-field-type{//top color1
+					@include backgroundOpacity($color1Dark,0.8);
+					&:before{
+						content:'\e81c';
+						background-color:$WHITE;
+						color:$color1Dark;
+					}
+					.field-content{
+						color:$WHITE;
+					}
+				}	
+				.views-field.views-field-title{//title
+					@include colorDescendantsFont($color1Dark);
+				}
+				.views-field{//other icons
+					&:before{
+						background-color:$color1Dark;
+						color:white;
 					}
 				}
 			}
@@ -141,6 +175,57 @@
 		@include clearfix;
 	}
 }
+
+/*
+ *  Form Stylings
+ */ 
+.view-id-businesses_and_events.view-display-id-page_results,#block-views-d400f6dac6873ec2ddd895ba96987fce, 
+form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-form-businesses-and-events-map-and-filters{
+	//PlaceHolder and Input Text
+	.SlectBox span.placeholder, input[type="text"],.SlectBox span{
+		font-style: normal;
+		padding: 5px;
+		border-radius: 1px;
+		@include remFontSize($fontS);
+	}
+	.SlectBox span.placeholder{
+		font-style:normal;
+		color:$BLACK;
+	}
+	.SlectBox span{
+		font-style:italic;
+		color:$GRAY;
+	}
+	.fakeButton{
+		border-radius:1px;
+		margin:0;
+		@include remFontSize($fontS);
+	}
+}
+
+.js{
+	.view-id-businesses_and_events.view-display-id-page_results,#block-views-d400f6dac6873ec2ddd895ba96987fce, 
+	form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-form-businesses-and-events-map-and-filters{
+		//Date Field JS Stylings 
+		#edit-field-start-datepicker-wrapper,#edit-field-end-datepicker-wrapper{
+			.form-item .description{
+				display:none;
+			}
+		}
+	}
+}
+.no-js{
+	.view-id-businesses_and_events.view-display-id-page_results,#block-views-d400f6dac6873ec2ddd895ba96987fce, 
+	form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-form-businesses-and-events-map-and-filters{
+		//Date Field No JS Stylings 
+		#edit-field-start-datepicker-wrapper,#edit-field-end-datepicker-wrapper{
+			.form-item label{
+				display:none;
+			}
+		}
+	}
+}
+
 
 /* 
  * We have two Views, one as a Block and one as a Page
