--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -15,6 +15,7 @@
 @import "components/Views_One_BusinessesAndEvents";
 @import "components/Views_Categories_Businesses_Events.scss";
 @import "components/Views_Unslider";
+@import "components/Views_Small_Blocks_Biz_Evs";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
