more theme updates

--- a/sites/all/themes/wttoc/sass/components/General_Colorings.scss
+++ b/sites/all/themes/wttoc/sass/components/General_Colorings.scss
@@ -35,26 +35,30 @@
 /*
  * Content Regions - Stylings
  */ 
-
+/*
+ * Mixins Reminder
+ * regionInnerSchemer($headerBackground, $headerTextColor, $textColor, $bordersColor)
+ * boxBorderRadiusMarginPadding($border, $radius, $margin, $padding)
+ */
 .l-content {
 	.lc-region--inner{
-		//@include boxBorderRadiusMarginPadding(2px solid $color1Light, 3px, 10px 0, 2%);
-		//@include regionInnerSchemer($color1, $WHITE, $DARKGRAY, $color1);
-		//@include buttonColor1;
+		@include boxBorderRadiusMarginPadding(2px solid transparent, 3px, 10px 0, 1%);
+		@include regionInnerSchemer($color1, $WHITE, $DARKGRAY, $color1);
+		@include buttonColor1;
 		.mainContentC .mccinner{
 		}
 	}	
 }
 .l-region--sidebar-first{
 	.lc-region--inner{
-		@include boxBorderRadiusMarginPadding(2px solid $color2Light, 3px, 10px 0, 3%);
+		@include boxBorderRadiusMarginPadding(2px solid transparent, 3px, 10px 0, 1%);
 		@include regionInnerSchemer($color2, $WHITE, $DARKGRAY, $color2);
 		@include buttonColor2;
 	}	
 }
 .l-region--sidebar-second{
 		.lc-region--inner{
-			@include boxBorderRadiusMarginPadding(2px solid $color3Light, 3px, 10px 0, 3%);
+			@include boxBorderRadiusMarginPadding(2px solid transparent, 3px, 10px 0, 1%);
 			@include regionInnerSchemer($color3, $WHITE, $DARKGRAY, $color3);
 			@include buttonColor3;
 		}
