--- a/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
@@ -249,3 +249,30 @@ form#views-exposed-form-businesses-and-events-page-results, form#views-exposed-f
 form#views-exposed-form-businesses-and-events-page-results .views-widget-filter-field_hidden_address_geofield_latlon_1{
 	display:none;
 }
+
+/*
+ * Layout Region Schemer For Search Business and Events Page
+ */
+body.page-search-businesses-and-events{
+	.l-content {
+		.lc-region--inner{
+			@include boxBorderRadiusMarginPadding(2px solid $color1Light, 3px, 10px 0, 2%);
+			@include regionInnerSchemer($color1, $WHITE, $DARKGRAY, $color1);
+			@include buttonColor1;
+		}
+	}
+	.l-region--sidebar-first{
+		.lc-region--inner{
+			@include boxBorderRadiusMarginPadding(2px solid $color2Light, 3px, 10px 0, 3%);
+			@include regionInnerSchemer($color2, $WHITE, $DARKGRAY, $color2);
+			@include buttonColor2;
+		}	
+	}
+	.l-region--sidebar-second{
+		.lc-region--inner{
+			@include boxBorderRadiusMarginPadding(2px solid $color3Light, 3px, 10px 0, 3%);
+			@include regionInnerSchemer($color3, $WHITE, $DARKGRAY, $color2);
+			@include buttonColor3;
+		}
+	}
+}
