--- a/sites/all/themes/wttoc/sass/variables/variables.scss
+++ b/sites/all/themes/wttoc/sass/variables/variables.scss
@@ -77,10 +77,10 @@ $WHITE:#fff;
 //$color1:#035163;/* Blue*/
 //$color1Light:#407D8B;
 //$color1Dark:#002A34;
-$color1:#5573b4;/* Blue*/
+$color1:#5573a4;/* Blue*/
 //$color1Light:#7696cf;
-$color1Light:#8CAFBE;
-$color1Dark:#015063;
+$color1Light:#A6B3CE;
+$color1Dark:#004656;
 
 $color2:#FD8A33;/*Orange*/
 $color2Light:#FFB882;
