--- a/sites/all/themes/wttoc/sass/components/Page_Home.scss
+++ b/sites/all/themes/wttoc/sass/components/Page_Home.scss
@@ -7,11 +7,11 @@ body.front{
 			margin: 0 0 1px 0;
 		}
 	}
-	h2.block__title{
+	.lc-region--inner .block > h2.block__title{
 		@include remFontSize($fontL);
 		@include linearGradient($LIGHTERDARKGRAY, $GRAY);
 		color:white;
-		padding: 10px 3px;
+		padding: 15px 5px;
 		text-align:center;
 	}
 	// Business Categories Block, Category Title
@@ -32,7 +32,7 @@ body.front{
 	}
 	// Business Categories Block, Block Title
 	#block-views-d336072e15ef9d7cf7595da1f2eae2c8{
-		border-color:$color1Light;
+		border-color: transparent;
 		.block__content{
 			padding: #{$columnPercentPadder * 1} #{$columnPercentPadder * 2};
 		}
@@ -42,7 +42,7 @@ body.front{
 	}
 	// Event Categories Block, Block Title
 	#block-views-9bc9d8ca0a25d6b82e61cd69a69f3fa4{
-		border-color:$color1Dark;
+		border-color: transparent;
 		.block__content{
 			padding: #{$columnPercentPadder * 1} #{$columnPercentPadder * 2};
 		}
@@ -52,14 +52,14 @@ body.front{
 	}
 	//Latest Businesses Block, Block Title
 	#block-views-e0c0dc6a7c147131ae1e55e7c269dfeb{
-		border-color: $color3;
+		border-color: transparent;
 		h2.block__title{
 			@include linearGradient(darken($color3,4%), $color3);
 		}
 	}
 	//Upcoming Events Block, Block Title
 	#block-views-f25193e5e6ef9e46d427bbbc9f2e9000{
-		border-color: $color3Dark;
+		border-color: transparent;
 		h2.block__title{
 			@include linearGradient(darken($color3Dark,4%), $color3Dark);
 		}
@@ -151,4 +151,16 @@ body.front{
 			background-position: center center;
 		}
 	}
+}
+
+/*
+ * Body and Block Backgrounds
+ */
+body.front{ 
+	.l-header, .l-main  .block__content{
+	  background-color:$WHITE;
+	}
+}
+body.front{
+  background-color: #D8D8D8;
 }
