--- a/sites/all/themes/wttoc/css/wttoc.reset.css
+++ b/sites/all/themes/wttoc/css/wttoc.reset.css
@@ -72,3 +72,5 @@ body .SumoSelect > .CaptionCont {
 table {
   overflow-x: auto;
   display: block; }
+
+/*# sourceMappingURL=wttoc.reset.css.map */
